--- a/Views/Users/Create.cshtml
+++ b/Views/Users/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model TreinamentoWeb.Models.Entity.users
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = Resources.Strings.newUser;
 }
 
-<h2>Create</h2>
+<h2>@Resources.Strings.newUser</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>users</h4>
+        <!--<h4>users</h4>-->
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -59,14 +59,18 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value=@Resources.Strings.save class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @*@Html.ActionLink("Back to List", "Index")*@
+
+    <a class="btn btn-default" href='@Url.Action("Index", "Users")'>
+        <span class="glyphicon glyphicon-chevron-left"></span>
+    </a>
 </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
