--- a/Views/Branches/Edit.cshtml
+++ b/Views/Branches/Edit.cshtml
@@ -4,6 +4,16 @@
     ViewBag.Title = Resources.Strings.editBranche;
 }
 
+@section JavaScripts
+{
+    <script>
+        const RESOURCELINKS = {
+            BRANCHES: "@Url.Action("Branches", "Branches")"
+        };
+    </script>
+    @Scripts.Render("~/bundles/branches");
+}
+
 <h2>@Resources.Strings.editBranche</h2>
 
 
@@ -43,8 +53,12 @@
         <div class="form-group">
             @Html.LabelFor(model => model.parent_branch, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.parent_branch, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.parent_branch, "", new { @class = "text-danger" })
+                @*  @Html.DropDownListFor(model => model.parent_branch, Enumerable.Empty<SelectListItem>(), new { @class = "form-control select2" })  *@
+                @* @Html.DropDownListFor(model => model.parent_branch, new List<SelectListItem> { new SelectListItem { Text = Model.name.ToString(), Value = Model.parent_branch.ToString() } }, new { @class = "form-control select2" })*@
+              @*  @Html.DropDownListFor(model => model.parent_branch, new List<SelectListItem> { new SelectListItem { Text = Html.Action("ParentBrancheName", new { id = Model.parent_branch }).ToString(), Value = Model.parent_branch.ToString() } }, new { @class = "form-control select2" }) *@
+                @Html.DropDownListFor(model => model.parent_branch, new List<SelectListItem> { new SelectListItem { Text = Html.Action("ParentBrancheName", new { idB = Model.parent_branch }).ToString(), Value = Model.parent_branch.ToString() } }, new { @class = "form-control select2" })
+                @Html.ValidationMessageFor(model => model.parent_branch, "", new { @class = "text-danger" })  
+                
             </div>
         </div>
 
